# EHC-LABS-aostrovskiy-s-branch

./: CMakeLists.txt
LABS/SR2/: CMakeLists.txt  LR2-ot4et.docx  sle_solve.cpp  sle_solve_no-opt.cpp  sle_solve_parallel.cpp
LABS/SR3/: CMakeLists.txt  LR3-report.docx  nqueens_opt.cpp  nqueens_vector.cpp
LABS/SR4/: CMakeLists.txt  LR4-report.docx  graph.cpp  graph_opt.cpp  graph_opt_seq.cpp
n-body-prj/: CMakeLists.txt  README.md  ~$eAPI-2024 CPC v1.0.docx
n-body-prj/gui/: CMakeLists.txt  main.cpp
n-body-prj/include/: GSimulation.hpp  Particle.hpp
n-body-prj/src/: CMakeLists.txt  GSimulation.cpp  main.cpp
scripts/: win_run_script.bat
